syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "auth/proto/auth/v1;authv1";

service AuthService {
  // Register registers a new user.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login logs in a user and returns an auth token.
  rpc Login (LoginRequest) returns (LoginResponse);
  // IsAdmin checks whether a user is an admin.
  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  // Обновление токена через refresh токен.
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message IsAdminRequest {
  int64 user_id = 1; // User ID to validate.
}

message IsAdminResponse {
  bool is_admin = 1;  // Indicates whether the user is an admin.
}

message RegisterRequest {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
}

message RegisterResponse {
  int64 user_id = 1; // User ID of the registered user.
}

message LoginRequest {
  string email = 1; // Email of the user to login.
  string password = 2; // Password of the user to login.
  int32 app_id = 3; // ID of the app to login to.
}

message LoginResponse {
  string access_token = 1; // Токен доступа.
  string refresh_token = 2; // Токен для обновления токена доступа.
  google.protobuf.Timestamp access_expires_at = 3;  // Когда истекает access.
  google.protobuf.Timestamp refresh_expires_at = 4; // Когда истекает refresh.
}

message LogoutRequest {
  string refresh_token = 1; // Какую сессию гасим.
}

message LogoutResponse {
  bool success = 1; // Indicates whether the logout was successful.
}

message RefreshTokenRequest {
  string refresh_token = 1; // Текущий refresh-токен.
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp access_expires_at = 3;
  google.protobuf.Timestamp refresh_expires_at = 4;
}