syntax = "proto3";

package chat.v1;

import "google/protobuf/timestamp.proto";

option go_package = "chat/proto/chat/v1;chatv1";

service ChatService {
  // Создать или получить существующий чат между двумя пользователями
  rpc GetOrCreateChat(GetOrCreateChatRequest) returns (GetOrCreateChatResponse);

  // Получить историю сообщений с пагинацией (cursor-based)
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);

  // Получить список чатов пользователя
  rpc GetUserChats(GetUserChatsRequest) returns (GetUserChatsResponse);

  // Отправить сообщение (вызывается внутри сервиса после WebSocket)
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

// GetOrCreateChat
message GetOrCreateChatRequest {
  int64 initiator_id  = 1;
  int64 recipient_id  = 2;
}

message GetOrCreateChatResponse {
  int64                    chat_id    = 1;
  bool                     created    = 2; // true если чат только что создан
  google.protobuf.Timestamp created_at = 3;
}

// GetMessages — cursor-based пагинация
// Курсор = created_at последнего полученного сообщения
message GetMessagesRequest {
  int64  chat_id    = 1;
  int64  limit      = 2; // рекомендуется 50
  string cursor     = 3; // пустой = с самого нового, иначе — старше курсора
}

message GetMessagesResponse {
  repeated MessageDTO messages    = 1;
  string              next_cursor = 2; // пустой = больше сообщений нет
}

// GetUserChats
message GetUserChatsRequest {
  int64 user_id = 1;
  int64 limit   = 2;
  int64 offset  = 3;
}

message GetUserChatsResponse {
  repeated ChatPreviewDTO chats = 1;
}

// SendMessage
message SendMessageRequest {
  int64  chat_id   = 1;
  int64  sender_id = 2;
  string text      = 3;
}

message SendMessageResponse {
  int64                    message_id = 1;
  google.protobuf.Timestamp created_at = 2;
}

// DTO

message MessageDTO {
  int64                    id         = 1;
  int64                    chat_id    = 2;
  int64                    sender_id  = 3;
  string                   text       = 4;
  google.protobuf.Timestamp created_at = 5;
}

// Превью чата для списка — последнее сообщение и собеседник
message ChatPreviewDTO {
  int64      chat_id          = 1;
  int64      companion_id     = 2; // ID собеседника
  string     last_message     = 3; // текст последнего сообщения
  int64      unread_count     = 4;
  google.protobuf.Timestamp last_message_at = 5;
}